--- a/places/templates/index.html
+++ b/places/templates/index.html
@@ -38,12 +38,8 @@
       width: 100px;
     }
   </style>
-  <script id="places-geojson" type="application/json">
-    {
-      "type": "FeatureCollection",
-      "features": {{ places|safe }}
-    }
-  </script>
+
+  {{ places|json_script:"places-geojson" }}
 
   <script id="app-template" type="text/template">
     <div v-bind:class="{'sidebar-content': 1, 'bg-white': selectedPlace, 'bg-secondary': !selectedPlace}">
